# alz

./: CMakeLists.txt  README.md
include/alz/: approximate_lz77.hpp
include/alz/internal/: hll_sketch.hpp  murmur_hash3.hpp  ref.hpp
src/: CMakeLists.txt  alz.cpp  inspect.cpp  vbyte.hpp
